# Calcora

./: .gitignore  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
giac-2.0.0/: INSTALL  Makefile  Makefile.am  Makefile.in  build_tarballs.jl  changeversion  ckbuildfree  ckbuildmacx86  ckbuildmingw  config.h  config.h.in  config.status  configure  configure.ac  giac.specs  giac.specs32  libtool  mkdebian  mkmacx86  win  win64  xcas.nsi  xcas64.nsi  xcaswin.nsi
giac-2.0.0/check/: Makefile  Makefile.am  Makefile.in  TP07-sol.cas.out1  TP09-sol.cas  TP16-sol.cas.out1  cas.tst  chk_alg  chk_exp  chk_hyp  chk_indep  chk_intblake1.sh  chk_intheb1  chk_intheb1.sh  chk_intheb2  chk_intheb2.sh  chk_intheb3  chk_intheb3.sh  chk_intheb4  chk_intheb4.sh  chk_intind  chk_intind.sh  chk_intmit  chk_intmit.sh  chk_invhyp  chk_invtrig  chk_log  chk_misc  chk_spec  chk_trig  chkint  chkint.cas  chkint.sh  intalg.cas  intblake1.cas  integrate.tst  intexp.cas  intheb1  intheb1.cas  intheb2  (+25 more)
giac-2.0.0/check/alg/: 1.1.1.2  1.1.1.3  1.1.1.4  1.1.2.2  1.1.2.y  1.1.3.2  1.1.3.3  1.1.3.4  1.1.3.5  1.1.3.6  1.1.3.8  1.1.4.2  1.1.4.3  1.2.1.2  1.2.1.3  1.2.1.4  1.2.1.5  1.2.1.6  1.2.1.9  1.2.2.2  1.2.2.3  1.2.2.4  1.2.2.5  1.2.2.6  1.2.3.2  1.2.3.3  1.2.3.4  1.2.3.5  1.2.4.2  1.3.1  1.3.2  1.3.3  1.3.4  1.3.5  1.3.6
giac-2.0.0/check/exp/: 2  2.1  2.2  2.3
giac-2.0.0/check/hyp/: 6.1a.1  6.1a.3  6.1a.4  6.1a.5  6.1a.7  6.1b.1  6.1b.2  6.1b.3  6.1b.4  6.1b.5  6.1b.7  6.2a.1  6.2a.2  6.2a.7  6.2b.1  6.2b.2  6.2b.7  6.3a.1  6.3a.2  6.3a.3  6.3a.7  6.3b.1  6.3b.2  6.3b.3  6.3b.7  6.4.1
giac-2.0.0/check/indep/: 0.Apostol.txt  0.Bondarenko.txt  0.Bronstein.txt  0.Calculus  0.Charlwood.txt  0.Hearn.txt  0.Jeffrey.txt  0.Moses.txt  0.Stewart.txt  0.Timofeev.txt  0.Welz.txt  0.Wester.txt
giac-2.0.0/check/invhyp/: 7.1a.1.4b  7.1a.2  7.1a.4a  7.1a.5  7.1b.1.4a  7.1b.1.4b  (+11 more)
giac-2.0.0/debian/: Makefile  changelog
giac-2.0.0/debianold/: Makefile  changelog
giac-2.0.0/doc/: Makefile  Makefile.am  Makefile.in  aide_cas  giactableau.js  khi110ab.tar  khi110b.tar  khi120ab.tar  khi120b.tar  khicas.nwa  khicasnw.html  numworks.js  nws.html  nws.js  nws_en.html  nws_sig.js  sector15v19.5.0.110  sector15v19.5.9.110  sector16v24.0.1.110  sector16v24.1.0.110  sector16v24.1.0.120  sector17v20.1.0.110  sector17v20.3.0.110  sector17v20.4.0.110  sector17v24.5.0.120  sector17v24.6.0.110  sector17v24.8.0.110  sector17v24.8.0.120  sector18v20.1.0.120  sector18v20.3.0.120  sector18v20.4.0.120  sector18v21.1.1.110  sector18v22.1.0.110  sector19v20.1.0.120  sector19v21.0.0.120  sector19v21.3.0.120  sector19v22.2.1.120  sector19v23.0.0.110  sector19v23.0.0.120  sector19v23.2.0.110  (+12 more)
giac-2.0.0/examples/: Makefile  Makefile.am  Makefile.in
giac-2.0.0/intl/: Makefile  localename.c
giac-2.0.0/micropython-1.12/: Makefile
giac-2.0.0/po/: Makefile  Makefile.in  de.po  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  fr.gmo  fr.po  giac.pot  it.po  pt.po  zh.po
giac-2.0.0/src/: Editeur.cc  Graph.cc  Graph.h  Graph3d.cc  History.cc  Input.cc  Makefile  Makefile.am  Makefile.in  Print.cc  Tableur.cc  Xcas1.cc  Xcas1.h  __apps  __platf  giacintl.h  gmp_replacements.h  hist.cxx  hist.fl  hist.h  icas.cc  lexer_tab_int.h  log  optimization.cc  sha256.h  static_lexer__numworks.h  static_lexer_numworks.h  usual.cc
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1529 files in other folders)
